--- a/app/src/main/res/layout/adapter_image.xml
+++ b/app/src/main/res/layout/adapter_image.xml
@@ -6,12 +6,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:padding="20dp">
 
+<!--    Try this attribute for ConstraintLayout-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_width="160dp"-->
+
 
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:src="@drawable/photo_1"
+        tools:src="@drawable/photo_6"
         android:adjustViewBounds="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
